--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,8 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div class="flex flex-col min-h-screen backdrop-blur-lg bg-gradient-to-t px-4">
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
