--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div class="flex flex-col min-h-screen backdrop-blur-lg bg-gradient-to-t px-4">
+		<div class="flex flex-col min-h-screen backdrop-blur-lg bg-gradient-to-t px-4 bg-slate-900">
 			%sveltekit.body%
 		</div>
 	</body>
