--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div class="flex flex-col min-h-screen backdrop-blur-lg bg-gradient-to-t px-4 bg-slate-900">
-			%sveltekit.body%
-		</div>
+	<body data-sveltekit-preload-data="hover" class="bg-white dark:bg-gray-900">
+		<div class="flex flex-col px-4 min-h-screen">%sveltekit.body%</div>
 	</body>
 </html>
