--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-white dark:bg-gray-900">
-		<div class="flex flex-col px-4 min-h-screen">%sveltekit.body%</div>
+		<div class="flex flex-col min-h-screen">%sveltekit.body%</div>
 	</body>
 </html>
