--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-white dark:bg-gray-900">
+	<body data-sveltekit-preload-data="hover" class="bg-white dark:bg-slate-900">
 		<div class="flex flex-col min-h-screen">%sveltekit.body%</div>
 	</body>
 </html>
