--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html class="dark" lang="en">
+<!doctype html>
+<html class="dark antialiased" lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
