--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-ui-950 min-h-screen">
-		%sveltekit.body%
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
