--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-ui-950 min-h-screen">
+	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
