--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,18 @@
 
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-YCVGCVZKTM"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-YCVGCVZKTM');
+		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div>%sveltekit.body%</div>
